--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <button id="prev-track">⏮️</button>
         🎵 Tocando agora: <span id="music-title">Lofi Relaxing Beats</span>
         <button id="next-track">⏭️</button>
+        <div id="progress-bar-container">
+            <div id="progress-bar"></div>
+        </div>
     </div>
     <div id="game-over" style="display: none;">
         <h2>Game Over</h2>
