--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <button id="prev-track">⏮️</button>
         🎵 Tocando agora: <span id="music-title">Lofi Relaxing Beats</span>
         <button id="next-track">⏭️</button>
+        <div id="volume-container">
+            <button id="volume-button">🔊</button>
+            <input id="volume-control" type="range" min="0" max="1" step="0.01" value="0.5" style="display: none;" />
+        </div>
         <div id="progress-bar-container">
             <div id="progress-bar"></div>
         </div>
@@ -51,7 +55,6 @@
         <h2>Jogo Pausado</h2>
         <p>Pressione <strong>P</strong> para continuar</p>
     </div>
-    <script src="src/scripts/utils.js"></script>
     <script src="src/scripts/game.js"></script>
 </body>
 </html>
