--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <h2>Jogo Pausado</h2>
         <p>Pressione <strong>P</strong> para continuar</p>
     </div>
-    <script src="src/scripts/game.js"></script>
+    <script type="module" src="src/scripts/game.js"></script>
 </body>
 </html>
